2024-04-22 : 0.1.0 First public version
2024-06-29 : 0.1.1 Fix path for php scripts
2024-10-11 : 0.1.2 Allow to upgrade to Prestashop 8.2